few changes for styling

--- a/Frontend/bite/src/pages/TasteProfile.css
+++ b/Frontend/bite/src/pages/TasteProfile.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 1rem;
-  max-width: 800px;
+  max-width: 1300px;
   margin: 0 auto;
 }
 
@@ -16,19 +16,19 @@
 .taste-profile p {
   font-size: 24px;
   margin-bottom: 3rem;
+  text-align: left;
+  padding-left: 1rem;
 }
 
 .taste-profile .key {
   color: #F3684A;
 }
 
-
 .welcome-message {
   text-align: center;
 }
 
 .welcome-subtitle {
-  text-align: center;
   font-size: 1.25em;
   font-weight: bold;
 }
@@ -37,14 +37,15 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  gap: 5rem;
 }
 
 .profile-info {
   flex: 1;
-  margin-right: 2rem;
+  margin-right: 3rem;
 }
 
 .profile-settings {
   flex: 1;
-  margin-left: 2rem;
+  margin-left: 5rem;
 }
