--- a/Frontend/bite/src/components/Navbar.css
+++ b/Frontend/bite/src/components/Navbar.css
@@ -47,4 +47,17 @@
     background-color: #FFFFFF;
     color: #F3684A;
 }
-  
+
+.logout-container {
+    margin-top: auto;
+    width: 100%;
+    padding-bottom: 30px;
+}
+
+.logout-button {
+    background: none;
+    border: none;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+}
