--- a/Frontend/bite/src/pages/HomePage.css
+++ b/Frontend/bite/src/pages/HomePage.css
@@ -1,9 +1,46 @@
 .home-page {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: calc(100vh - 100px);
-    font-size: 24px;
-    font-weight: bold;
 }
   
+h1 {
+margin-top: 50px;
+font-size: 48px;
+}
+
+.updates-container {
+display: flex;
+flex-direction: column;
+gap: 50px;
+margin-top: 30px;
+width: 100%;
+}
+
+.time-frame-section {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.time-frame-section h2 {
+font-family: 'Inter', sans-serif;
+font-weight: 700;
+font-size: 36px;
+line-height: 44px;
+color: #F3684A;
+}
+
+.update-item {
+background-color: #f3f3f3;
+border-radius: 5px;
+padding: 20px;
+margin-top: 20px;
+width: 80%;
+box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.review p,
+.list-update p {
+margin: 0;
+}
