--- a/Frontend/bite/src/components/EditableLists.css
+++ b/Frontend/bite/src/components/EditableLists.css
@@ -69,6 +69,15 @@
   }
   
   .add-to-list-button {
-    margin-left: 20px;
+    color: #FFFFFF;
+    background: #F3684A;
+    border: 2px solid #F3684A;
+    border-radius: 7px;
+    padding: 5px 10px;
+    margin-top: 5px;
+    cursor: pointer;
+    font-size: 15px;
+    font-family: 'Inter';
+    font-style: normal;
   }
   
