--- a/Frontend/bite/src/pages/MapPage.css
+++ b/Frontend/bite/src/pages/MapPage.css
@@ -3,32 +3,37 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 200px;
 }
 
 .map-toggle {
   display: flex;
   position: absolute;
-  bottom: 5%;
-  right: 5%;
+  bottom: 3%;
+  right: 3%;
   z-index: 2;
   color: #F3684A;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
+  background: #FFFFFF;
+  padding: 10px;
+  border: 2px solid #F3684A;
+  border-radius: 7px;
 }
+
+
 
 .map-search {
   position: absolute;
-  top: 10%;
-  left: 13%;
-  height: 63px;
+  top: 60px;
   background: #FFFFFF;
-  border: 2px solid #F3684A;
-  border-radius: 7px;
-  z-index: 2;
+  z-index: 101;
   display: flex;
+  width: 461px;
 }
+
 
 .map-search-input {
   font-family: 'Inter';
@@ -41,15 +46,15 @@
 
 .button-container {
   position: absolute;
-  top: 12%;
-  right: 5%;
+  top: 7%;
+  right: 1%;
   display: flex;
   flex-direction: row;
 }
 
 .selected-button {
   background-color: #F3684A;
-  color: #FFFFFF;
+  color: #FFFFFF; 
 }
 
 .unselected-button {
@@ -58,8 +63,8 @@
 }
 
 .button {
-  width: 154px;
-  height: 30px;
+  width: 165px;
+  height: 45px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
