--- a/Frontend/bite/src/pages/RegisterPage.css
+++ b/Frontend/bite/src/pages/RegisterPage.css
@@ -5,6 +5,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  font-family: 'Inter';
+  font-weight: 500;
 }
 
 .logo {
