--- a/Frontend/bite/src/components/Map.css
+++ b/Frontend/bite/src/components/Map.css
@@ -16,7 +16,7 @@
   }
   
 .friends-title {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     line-height: 29px;
